--- a/wiki/de/Fasteners_Workbench.html
+++ b/wiki/de/Fasteners_Workbench.html
@@ -267,9 +267,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO4034.svg&amp;filetimestamp=20240106165641&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO4034.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 4034</b> Sechskantmuttern ISO-Typ 1.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO4035.svg&amp;filetimestamp=20160531200842&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO4035.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 4035</b> Sechskantmutter mit Fase, niedrige Form (Typ 0). <i>Produktklassen A und B.</i></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_EN1661.svg&amp;filetimestamp=20160531200229&amp;.html" class="mw-file-description"><img src="../File/Fasteners_EN1661.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 4161</b> Sechskantmutter mit Flange.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_DIN985.svg&amp;filetimestamp=20210815132141&amp;.html" class="mw-file-description"><img src="../File/Fasteners_DIN985.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7040</b> Prevailing torque type hexagon nut (with non-metallic insert).</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_DIN985.svg&amp;filetimestamp=20210815132141&amp;.html" class="mw-file-description"><img src="../File/Fasteners_DIN985.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7040</b> Sechskantmutter mit Drehmomentbegrenzung (mit nichtmetallischem Einsatz).</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_DIN985.svg&amp;filetimestamp=20210815132141&amp;.html" class="mw-file-description"><img src="../File/Fasteners_DIN985.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7041</b> Prevailing torque type hexagon nut (with non-metallic insert), style 2.</li></ul>
 </div>
@@ -423,13 +421,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118085040
+Cached time: 20260118085103
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.547 seconds
-Real time usage: 0.890 seconds
-Preprocessor visited node count: 703/1000000
+CPU time usage: 0.508 seconds
+Real time usage: 0.768 seconds
+Preprocessor visited node count: 702/1000000
 Post&#8208;expand include size: 7106/2097152 bytes
 Template argument size: 1357/2097152 bytes
 Highest expansion depth: 8/100
@@ -439,19 +437,19 @@ Unstrip post&#8208;expand size: 1775/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.285      1 -total
- 46.29%   20.961      1 Template:Fasteners_Tools_navi/de
- 21.95%    9.942      7 Template:PropertyData/de
- 10.18%    4.608      1 Template:VersionPlus/de
-  8.79%    3.981      7 Template:Variable
-  7.63%    3.457      1 Template:Navigation_menu_2
-  5.29%    2.395      1 Template:TRUE
-  4.39%    1.988      1 Template:Button
-  2.69%    1.219      1 Template:TOCright
-  2.57%    1.165      2 Template:Caption
+100.00%   25.689      1 -total
+ 25.93%    6.661      1 Template:Fasteners_Tools_navi/de
+ 25.23%    6.482      7 Template:PropertyData/de
+ 12.41%    3.189      1 Template:VersionPlus/de
+ 11.60%    2.980      7 Template:Variable
+  6.85%    1.760      2 Template:Caption
+  6.59%    1.692      1 Template:Navigation_menu_2
+  6.46%    1.660      1 Template:TOCright
+  5.85%    1.502      7 Template:MenuCommand
+  5.52%    1.419      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260118085039 and revision id 1739930. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260118085102 and revision id 1739932. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
