--- a/wiki/de/Fasteners_Workbench.html
+++ b/wiki/de/Fasteners_Workbench.html
@@ -268,12 +268,8 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO4035.svg&amp;filetimestamp=20160531200842&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO4035.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 4035</b> Sechskantmutter mit Fase, niedrige Form (Typ 0). <i>Produktklassen A und B.</i></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_EN1661.svg&amp;filetimestamp=20160531200229&amp;.html" class="mw-file-description"><img src="../File/Fasteners_EN1661.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 4161</b> Sechskantmutter mit Flange.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_DIN985.svg&amp;filetimestamp=20210815132141&amp;.html" class="mw-file-description"><img src="../File/Fasteners_DIN985.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7040</b> Sechskantmutter mit Drehmomentbegrenzung (mit nichtmetallischem Einsatz).</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_DIN985.svg&amp;filetimestamp=20210815132141&amp;.html" class="mw-file-description"><img src="../File/Fasteners_DIN985.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7041</b> Prevailing torque type hexagon nut (with non-metallic insert), style 2.</li></ul>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7043.svg&amp;filetimestamp=20240405163104&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7043.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7043</b> Prevailing torque type hexagon nut with flange (with non-metallic insert).</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_DIN985.svg&amp;filetimestamp=20210815132141&amp;.html" class="mw-file-description"><img src="../File/Fasteners_DIN985.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7041</b> Sechskantmutter mit Drehmomentbegrenzung (mit nichtmetallischem Einsatz), Typ 2.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7043.svg&amp;filetimestamp=20240405163104&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7043.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7043</b> Sechskantmutter mit Flansch und Drehmomentbegrenzung (mit nichtmetallischem Einsatz).</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7044.svg&amp;filetimestamp=20240405163240&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7044.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7044</b> Prevailing torque type all-metal hexagon nut with flange.</li></ul>
 </div>
@@ -421,13 +417,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118085103
+Cached time: 20260118085146
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.508 seconds
-Real time usage: 0.768 seconds
-Preprocessor visited node count: 702/1000000
+CPU time usage: 0.445 seconds
+Real time usage: 0.583 seconds
+Preprocessor visited node count: 700/1000000
 Post&#8208;expand include size: 7106/2097152 bytes
 Template argument size: 1357/2097152 bytes
 Highest expansion depth: 8/100
@@ -437,19 +433,19 @@ Unstrip post&#8208;expand size: 1775/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.689      1 -total
- 25.93%    6.661      1 Template:Fasteners_Tools_navi/de
- 25.23%    6.482      7 Template:PropertyData/de
- 12.41%    3.189      1 Template:VersionPlus/de
- 11.60%    2.980      7 Template:Variable
-  6.85%    1.760      2 Template:Caption
-  6.59%    1.692      1 Template:Navigation_menu_2
-  6.46%    1.660      1 Template:TOCright
-  5.85%    1.502      7 Template:MenuCommand
-  5.52%    1.419      1 Template:Button
+100.00%   28.254      1 -total
+ 33.18%    9.376      1 Template:Fasteners_Tools_navi/de
+ 24.09%    6.805      7 Template:PropertyData/de
+ 11.35%    3.208      7 Template:Variable
+  8.15%    2.304      1 Template:VersionPlus/de
+  7.36%    2.080      1 Template:Navigation_menu_2
+  7.24%    2.046      2 Template:Caption
+  6.27%    1.773      7 Template:MenuCommand
+  5.68%    1.606      1 Template:TRUE
+  5.11%    1.444      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260118085102 and revision id 1739932. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260118085145 and revision id 1739936. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
