--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -46,7 +46,7 @@
 </p><p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>: N&#283;kter&eacute; z&#345;&iacute;dka pou&#382;&iacute;van&eacute; pracovn&iacute; plochy jsou ve v&yacute;choz&iacute;m nastaven&iacute; deaktivov&aacute;ny. Ty jsou n&iacute;&#382;e <code>D</code> ozna&#269;eny. Deaktivovanou pracovn&iacute; plochu lze aktivovat v <a href="../Preferences_Editor.html#Workbenches/cs" title="Preferences Editor">P&#345;edvolb&aacute;ch</a>. Deaktivovan&eacute; pracovn&iacute; plochy lze st&aacute;le aktivovat pomoc&iacute; <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> menu <a href="../index.php?title=Std_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Workbench/cs (page does not exist)">TabBar selektoru Pracovn&iacute; plochy</a>.
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../cs/Std_Base.html" title="Std Base/cs">Std Base</a>. Nejedn&aacute; se vlastn&#283; o pracovn&iacute; plochu, ale sp&iacute;&scaron;e o kategorii 'standardn&iacute;ch' p&#345;&iacute;kaz&#367; a n&aacute;stroj&#367;, kter&eacute; lze pou&#382;&iacute;t ve v&scaron;ech pracovn&iacute;ch ploch&aacute;ch.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Pracovn&iacute; plocha Assembly</a> pro vytv&aacute;&#345;en&iacute; a &#345;e&scaron;en&iacute; mechanick&yacute;ch sestav. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Assembly_Workbench.html" title="Assembly Workbench">Pracovn&iacute; plocha Assembly</a> pro vytv&aacute;&#345;en&iacute; a &#345;e&scaron;en&iacute; mechanick&yacute;ch sestav. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">Pracovn&iacute; plocha BIM</a> pro pr&aacute;ci s architektonick&yacute;mi prvky a vytv&aacute;&#345;en&iacute; <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Building_information_modeling">BIM</a> model&#367;. Slu&#269;uje pracovn&iacute; plochu Arch a d&#345;&iacute;ve extern&iacute; pracovn&iacute; plochu BIM, kter&aacute; je k dispozici v <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_CAM.svg&amp;filetimestamp=20240316105021&amp;.html" class="mw-file-description"><img src="../File/Workbench_CAM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../CAM_Workbench.html" title="CAM Workbench">Pracovn&iacute; plocha CAM</a> se pou&#382;&iacute;v&aacute; k vytv&aacute;&#345;en&iacute; instrukc&iacute; G-k&oacute;du. Tato pracovn&iacute; plocha se d&#345;&iacute;ve naz&yacute;vala "Path Workbench" <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Draft.svg&amp;filetimestamp=20200404172706&amp;.html" class="mw-file-description"><img src="../File/Workbench_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Draft_Workbench.html" title="Draft Workbench">Pracovn&iacute; plocha Draft</a> obsahuje 2D n&aacute;stroje a z&aacute;kladn&iacute; 2D a 3D CAD operace.</li></ul>
@@ -110,12 +110,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118084926
+Cached time: 20260118085213
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.121 seconds
-Real time usage: 0.175 seconds
+CPU time usage: 0.149 seconds
+Real time usage: 0.249 seconds
 Preprocessor visited node count: 288/1000000
 Post&#8208;expand include size: 8008/2097152 bytes
 Template argument size: 2376/2097152 bytes
@@ -126,18 +126,18 @@ Unstrip post&#8208;expand size: 4413/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.920      1 -total
- 35.52%    4.945      1 Template:Userdocnavi/cs
- 16.17%    2.251      1 Template:Navigation_menu_2
- 15.49%    2.156      2 Template:Docnav
-  9.26%    1.289      1 Template:MenuCommand
-  8.76%    1.219      5 Template:Incode
-  8.65%    1.204      3 Template:Version
-  8.16%    1.136      1 Template:Button
-  7.96%    1.108      2 Template:VersionMinus
+100.00%   23.452      1 -total
+ 42.23%    9.905      1 Template:Userdocnavi/cs
+ 15.41%    3.615      1 Template:Navigation_menu_2
+ 10.84%    2.541      2 Template:Docnav
+ 10.09%    2.366      5 Template:Incode
+  9.27%    2.173      1 Template:MenuCommand
+  9.02%    2.115      2 Template:VersionMinus
+  8.13%    1.906      1 Template:Button
+  6.37%    1.493      3 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118084926 and revision id 1739924. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118085213 and revision id 1739938. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
