--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -47,7 +47,7 @@
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../cs/Std_Base.html" title="Std Base/cs">Std Base</a>. Nejedn&aacute; se vlastn&#283; o pracovn&iacute; plochu, ale sp&iacute;&scaron;e o kategorii 'standardn&iacute;ch' p&#345;&iacute;kaz&#367; a n&aacute;stroj&#367;, kter&eacute; lze pou&#382;&iacute;t ve v&scaron;ech pracovn&iacute;ch ploch&aacute;ch.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Assembly_Workbench.html" title="Assembly Workbench">Pracovn&iacute; plocha Assembly</a> pro vytv&aacute;&#345;en&iacute; a &#345;e&scaron;en&iacute; mechanick&yacute;ch sestav. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">Pracovn&iacute; plocha BIM</a> pro pr&aacute;ci s architektonick&yacute;mi prvky a vytv&aacute;&#345;en&iacute; <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Building_information_modeling">BIM</a> model&#367;. Slu&#269;uje pracovn&iacute; plochu Arch a d&#345;&iacute;ve extern&iacute; pracovn&iacute; plochu BIM, kter&aacute; je k dispozici v <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Workbench.html" title="BIM Workbench">Pracovn&iacute; plocha BIM</a> pro pr&aacute;ci s architektonick&yacute;mi prvky a vytv&aacute;&#345;en&iacute; <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Building_information_modeling">BIM</a> model&#367;. Slu&#269;uje pracovn&iacute; plochu Arch a d&#345;&iacute;ve extern&iacute; pracovn&iacute; plochu BIM, kter&aacute; je k dispozici v <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_CAM.svg&amp;filetimestamp=20240316105021&amp;.html" class="mw-file-description"><img src="../File/Workbench_CAM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../CAM_Workbench.html" title="CAM Workbench">Pracovn&iacute; plocha CAM</a> se pou&#382;&iacute;v&aacute; k vytv&aacute;&#345;en&iacute; instrukc&iacute; G-k&oacute;du. Tato pracovn&iacute; plocha se d&#345;&iacute;ve naz&yacute;vala "Path Workbench" <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Draft.svg&amp;filetimestamp=20200404172706&amp;.html" class="mw-file-description"><img src="../File/Workbench_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Draft_Workbench.html" title="Draft Workbench">Pracovn&iacute; plocha Draft</a> obsahuje 2D n&aacute;stroje a z&aacute;kladn&iacute; 2D a 3D CAD operace.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_FEM.svg&amp;filetimestamp=20240405093343&amp;.html" class="mw-file-description"><img src="../File/Workbench_FEM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../FEM_Workbench.html" title="FEM Workbench">Pracovn&iacute; plocha FEM</a> poskytuje pracovn&iacute; postup pro anal&yacute;zu kone&#269;n&yacute;ch prvk&#367; (FEA)</li></ul>
@@ -110,12 +110,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118085213
+Cached time: 20260118085224
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.149 seconds
-Real time usage: 0.249 seconds
+CPU time usage: 0.146 seconds
+Real time usage: 0.240 seconds
 Preprocessor visited node count: 288/1000000
 Post&#8208;expand include size: 8008/2097152 bytes
 Template argument size: 2376/2097152 bytes
@@ -126,18 +126,18 @@ Unstrip post&#8208;expand size: 4413/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.452      1 -total
- 42.23%    9.905      1 Template:Userdocnavi/cs
- 15.41%    3.615      1 Template:Navigation_menu_2
- 10.84%    2.541      2 Template:Docnav
- 10.09%    2.366      5 Template:Incode
-  9.27%    2.173      1 Template:MenuCommand
-  9.02%    2.115      2 Template:VersionMinus
-  8.13%    1.906      1 Template:Button
-  6.37%    1.493      3 Template:Version
+100.00%   19.860      1 -total
+ 37.27%    7.401      1 Template:Userdocnavi/cs
+ 16.12%    3.202      1 Template:Navigation_menu_2
+ 13.58%    2.698      2 Template:Docnav
+ 10.46%    2.078      1 Template:Button
+  9.30%    1.847      3 Template:Version
+  8.86%    1.759      2 Template:VersionMinus
+  8.02%    1.593      5 Template:Incode
+  7.66%    1.522      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118085213 and revision id 1739938. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118085224 and revision id 1739940. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
