--- a/wiki/de/Fasteners_Workbench.html
+++ b/wiki/de/Fasteners_Workbench.html
@@ -270,9 +270,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_DIN985.svg&amp;filetimestamp=20210815132141&amp;.html" class="mw-file-description"><img src="../File/Fasteners_DIN985.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7040</b> Sechskantmutter mit Drehmomentbegrenzung (mit nichtmetallischem Einsatz).</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_DIN985.svg&amp;filetimestamp=20210815132141&amp;.html" class="mw-file-description"><img src="../File/Fasteners_DIN985.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7041</b> Sechskantmutter mit Drehmomentbegrenzung (mit nichtmetallischem Einsatz), Typ 2.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7043.svg&amp;filetimestamp=20240405163104&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7043.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7043</b> Sechskantmutter mit Flansch und Drehmomentbegrenzung (mit nichtmetallischem Einsatz).</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7044.svg&amp;filetimestamp=20240405163240&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7044.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7044</b> Prevailing torque type all-metal hexagon nut with flange.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7044.svg&amp;filetimestamp=20240405163240&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7044.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7044</b> Sechskantmutter mit Flansch und Drehmomentbegrenzung (Vollmetall)</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7719.svg&amp;filetimestamp=20240405162834&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7719.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7719</b> Prevailing torque type all-metal hexagon nut.</li></ul>
 </div>
@@ -417,13 +415,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118085146
+Cached time: 20260118085255
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.445 seconds
-Real time usage: 0.583 seconds
-Preprocessor visited node count: 700/1000000
+CPU time usage: 0.476 seconds
+Real time usage: 0.682 seconds
+Preprocessor visited node count: 699/1000000
 Post&#8208;expand include size: 7106/2097152 bytes
 Template argument size: 1357/2097152 bytes
 Highest expansion depth: 8/100
@@ -433,19 +431,19 @@ Unstrip post&#8208;expand size: 1775/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.254      1 -total
- 33.18%    9.376      1 Template:Fasteners_Tools_navi/de
- 24.09%    6.805      7 Template:PropertyData/de
- 11.35%    3.208      7 Template:Variable
-  8.15%    2.304      1 Template:VersionPlus/de
-  7.36%    2.080      1 Template:Navigation_menu_2
-  7.24%    2.046      2 Template:Caption
-  6.27%    1.773      7 Template:MenuCommand
-  5.68%    1.606      1 Template:TRUE
-  5.11%    1.444      1 Template:TOCright
+100.00%   49.394      1 -total
+ 29.62%   14.630      1 Template:Fasteners_Tools_navi/de
+ 28.59%   14.122      7 Template:PropertyData/de
+ 13.04%    6.440      1 Template:VersionPlus/de
+  9.48%    4.685      7 Template:Variable
+  6.85%    3.385      1 Template:Navigation_menu_2
+  6.80%    3.358      1 Template:Button
+  5.29%    2.614      1 Template:TRUE
+  4.71%    2.328      1 Template:TOCright
+  4.02%    1.987      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260118085145 and revision id 1739936. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260118085255 and revision id 1739942. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
